changed base mode map for cleaned so be WALKING, CYCLING, AUTOMOTIVE, AIR_OR_HSR

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -151,6 +151,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c45d91ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pv_to_pkl(pv, pkl_file_name):\n",
+    "    if type(pv) is not list: pv = [pv]\n",
+    "    import pickle\n",
+    "    with open(pkl_file_name, 'wb') as outp:\n",
+    "        for pv in pv_l:\n",
+    "            pickle.dump(pv, outp, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fceb9e2b",
    "metadata": {},
    "outputs": [],
@@ -276,6 +291,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4713f313",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_trip_ss_and_gts_timeline(gisv_la, 'ios', 'HAHFDC')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "20bb504d",
    "metadata": {},
@@ -334,13 +359,13 @@
     "        1 : 'CYCLING', \n",
     "        2 : 'WALKING', \n",
     "        3 : 'WALKING', \n",
-    "        4 : 'INVALID', \n",
+    "        4 : 'UNKNOWN', \n",
     "        5 : 'WALKING', \n",
     "        7 : 'WALKING', \n",
     "        8 : 'WALKING', \n",
-    "        9 : 'INVALID', \n",
+    "        9 : 'UNKNOWN', \n",
     "        10 : 'AUTOMOTIVE', \n",
-    "        11 : 'TRAIN', \n",
+    "        11 : 'AIR_OR_HSR', \n",
     "         \"WALKING\": \"WALKING\",\n",
     "         \"RUNNING\" : \"WALKING\", \n",
     "         \"CYCLING\" : \"CYCLING\",\n",
@@ -348,12 +373,13 @@
     "         \"ESCOOTER\": \"CYCLING\", \n",
     "         \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
     "         \"BUS\": \"AUTOMOTIVE\",\n",
-    "         \"TRAIN\": \"TRAIN\",\n",
-    "         \"LIGHT_RAIL\": \"TRAIN\",\n",
-    "         \"SUBWAY\": \"TRAIN\",\n",
+    "         \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "         \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "         \"SUBWAY\": \"AUTOMOTIVE\",\n",
     "         \"CAR\": \"AUTOMOTIVE\",\n",
-    "         \"AIR_OR_HSR\": \"TRAIN\",\n",
-    "         \"INVALID\" : \"INVALID\"}"
+    "         \"AIR_OR_HSR\": \"AIR_OR_HSR\",\n",
+    "         \"INVALID\" : \"INVALID\", \n",
+    "         \"UNKNOWN\" : \"UNKNOWN\"}"
    ]
   },
   {
@@ -404,7 +430,7 @@
    "source": [
     "def get_binary_class_in_sec(os, role, pv, BASE_MODE, test=False, test_trip=None):\n",
     "    if not test:\n",
-    "        if type(pv) is not list: pv - [pv]\n",
+    "        if type(pv) is not list: pv = [pv]\n",
     "        trips = []\n",
     "        for v in pv:\n",
     "            trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
@@ -661,7 +687,7 @@
     "            if d_type == 'random_forest':\n",
     "                title = f\"Confusion Matrices for Inferred Output Data (Random Forest) on Phones Running {os} \\n by Calibration Settings\"\n",
     "            else:\n",
-    "                title = f\"Confusion Matrices for Inferred Output Data (Random Forest) on Phones Running {os} \\n by Calibration Settings\"\n",
+    "                title = f\"Confusion Matrices for Inferred Output Data (GIS) on Phones Running {os} \\n by Calibration Settings\"\n",
     "        else:\n",
     "            assert 0, f'INVALID d_type {d_type}'\n",
     "        df = df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'])\n",
@@ -921,37 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e96fc1b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_rf_binary('ios', [gisv_la, gisv_sj, gisv_ucb])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0d45eac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_rf_binary('android', [gisv_la, gisv_sj, gisv_ucb])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fed08598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_f_score('ios', [gisv_la, gisv_sj, gisv_ucb], IBMM)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2f8ad79",
+   "id": "841f929d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,26 +957,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d624e9db",
+   "id": "90d1079d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_cm('ios')"
+    "display_f_score('ios', [gisv_la, gisv_sj, gisv_ucb], IBMM)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1334b1",
+   "id": "5882e9df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_cm('android')"
+    "plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05023a27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cm('android', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a114d70a",
+   "id": "5251a9e3",
    "metadata": {},
    "source": [
     "# Unite Testing\n",
@@ -992,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b804c537",
+   "id": "bcfa1c91",
    "metadata": {},
    "source": [
     "## Example timeline\n",
@@ -1042,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c66986f4",
+   "id": "eb8a522f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0ab3af",
+   "id": "53e64c48",
    "metadata": {},
    "source": [
     "#### get_binary_class_in_sec"
@@ -1067,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2734c693",
+   "id": "e54d921b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5f26d0",
+   "id": "492b4ffe",
    "metadata": {},
    "source": [
     "#### get_F_score"
@@ -1089,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e52b9de6",
+   "id": "0b8f5d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f617fc24",
+   "id": "2e54c761",
    "metadata": {},
    "source": [
     "#### get_confusion_matrix"
@@ -1108,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4966da38",
+   "id": "70f41be3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,6 +1124,16 @@
     "assert df.loc['WALKING'].loc['WALKING'] == 0.55 and df.loc['WALKING'].loc['BICYCLING'] == 0.70 and round(df.loc['WALKING'].loc['NO_GT'],2) == 0.40\n",
     "assert df.loc['CYCLING'].loc['WALKING'] == 0 and df.loc['CYCLING'].loc['BICYCLING'] == 1.35 and round(df.loc['CYCLING'].loc['NO_GT'],2) == 0.0\n",
     "assert round(df.loc['NO_SENSED'].loc['WALKING'], 2) == 0.50 and df.loc['NO_SENSED'].loc['BICYCLING'] == 0.0 and round(df.loc['NO_SENSED'].loc['NO_GT'],2) == 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9f152c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   }
  ],
