fixed typo bug relating to latest fix regarding no_sensed mode at the end of a trip

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -442,7 +442,7 @@
     "                    no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
     "                except:\n",
     "                    no_sensed = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "                    no_sensed += max(0, trip['gts_timeline'][-1]['data']['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
+    "                    no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
     "                if mode == 'INVALID':\n",
     "                    FP[mode] = no_sensed\n",
     "                elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
@@ -632,7 +632,7 @@
     "                no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
     "            except:\n",
     "                no_sensed = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "                no_sensed += max(0, trip['gts_timeline'][-1]['data']['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
+    "                no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
     "            if no_sensed:\n",
     "                ns = {'sensed_mode' : 'NO_SENSED', trip['gts_timeline'][0]['mode'] : no_sensed}\n",
     "                cm_l.append(ns)\n",
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25eaff37",
+   "id": "079c4fb5",
    "metadata": {},
    "source": [
     "## Example timelines"
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d961e604",
+   "id": "869b3a13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc096587",
+   "id": "b7d806de",
    "metadata": {},
    "source": [
     "### No sensed at beggining and end, unimodal\n",
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d42fe6d3",
+   "id": "eabbf46d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b63616",
+   "id": "940c1378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da0bcf7",
+   "id": "14e775f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43a5b7a2",
+   "id": "edb3b27d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,12 +1227,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d15e5e",
+   "id": "df659e09",
    "metadata": {},
    "outputs": [],
    "source": [
     "assert df.loc['WALKING'].loc['WALKING'] == 1\n",
     "assert df.loc['NO_SENSED'].loc['WALKING'] == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55150c7",
+   "metadata": {},
+   "source": [
+    "### No sensed at beggining and end, unimodal\n",
+    "\n",
+    "* pipeline timeline\n",
+    "WALKING (0, 2)\n",
+    "\n",
+    "* ground truth timeline\n",
+    "WALKING (0.5, 1.5)\n",
+    "\n",
+    "#### Multiclass classifiers\n",
+    "* TP\n",
+    "    + WALKING [1]\n",
+    "* FP\n",
+    "    + WALKING [1]\n",
+    "* FN\n",
+    "    + INVALID [1]\n",
+    "* TN\n",
+    "    + INVALID [1]\n",
+    "* $F_1$ score\n",
+    "    + ...\n",
+    "#### Confusion Matrix\n",
+    "\n",
+    "sensed mode = ['WALKING']\n",
+    "\n",
+    "ground truth = ['WALKING', 'NO_GT]\n",
+    "\n",
+    "    [1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "861fd7ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_trip = {\n",
+    "    'gts_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1.5, 'mode' : 'WALKING'}],\n",
+    "    'ss_timeline' : [{'start_ts' : 0, 'end_ts' : 2, 'mode' : 'WALKING'}]\n",
+    "}\n",
+    "test_BMM = {'WALKING' : 'WALKING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69c698e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4b1de03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert res[0]['WALKING'] == 1\n",
+    "assert res[1]['WALKING'] == 1\n",
+    "assert res[2]['INVALID'] == 1\n",
+    "assert res[3]['INVALID'] == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e96a350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_confusion_matrix(..., ..., ..., test=True, test_trip=test_trip)\n",
+    "df = pd.DataFrame(res).groupby('sensed_mode').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a204633c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert df.loc['WALKING'].loc['WALKING'] == 1\n",
+    "assert df.loc['WALKING'].loc['NO_GT'] == 1"
    ]
   }
  ],
