fixed typo in unit test documentation

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "079c4fb5",
+   "id": "60805138",
    "metadata": {},
    "source": [
     "## Example timelines"
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869b3a13",
+   "id": "6ad30123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d806de",
+   "id": "b130e0b5",
    "metadata": {},
    "source": [
     "### No sensed at beggining and end, unimodal\n",
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eabbf46d",
+   "id": "c116eeff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940c1378",
+   "id": "52d6ca48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14e775f8",
+   "id": "53c30f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb3b27d",
+   "id": "af08a6b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df659e09",
+   "id": "a510b8b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,10 +1237,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55150c7",
+   "id": "973a1716",
    "metadata": {},
    "source": [
-    "### No sensed at beggining and end, unimodal\n",
+    "### No ground truth at beggining and end, unimodal\n",
     "\n",
     "* pipeline timeline\n",
     "WALKING (0, 2)\n",
@@ -1271,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861fd7ac",
+   "id": "54da3fa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69c698e9",
+   "id": "92916c9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b1de03",
+   "id": "ccf9c908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e96a350",
+   "id": "6f7cbc2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a204633c",
+   "id": "91b1ecb7",
    "metadata": {},
    "outputs": [],
    "source": [
