added unit test for multimodal dual ended no sensed trip

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -436,21 +436,35 @@
     "            # get no sensed for a given mode \n",
     "            #### Note, this relies on the assumption that our timelines are always ordered\n",
     "            if len(trip['ss_timeline']) > 0 and len(trip['gts_timeline']) > 0:\n",
-    "                no_sensed = 0\n",
+    "                no_sensed_start = 0\n",
+    "                no_sensed_end = 0\n",
     "                try:\n",
-    "                    no_sensed = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']) \n",
-    "                    no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
+    "                    no_sensed_start = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']) \n",
+    "                    no_sensed_end = max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
     "                except:\n",
-    "                    no_sensed = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "                    no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
+    "                    no_sensed_start = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
+    "                    no_sensed_end += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
     "                if mode == 'INVALID':\n",
-    "                    FP[mode] = no_sensed\n",
+    "                    FP[mode] = no_sensed_end + no_sensed_start\n",
+    "                elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']] and mode == BASE_MODE[trip['gts_timeline'][-1]['mode']]:\n",
+    "                    FN[mode] = FN.setdefault(mode, 0) + no_sensed_start + no_sensed_end\n",
     "                elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
-    "                    # False Negative\n",
-    "                    FN[mode] = no_sensed\n",
+    "                    FN[mode] = FN.setdefault(mode, 0) + no_sensed_start\n",
+    "                    TN[mode] = TN.setdefault(mode, 0) + no_sensed_end\n",
+    "                elif mode == BASE_MODE[trip['gts_timeline'][-1]['mode']]:\n",
+    "                    FN[mode] = FN.setdefault(mode, 0) + no_sensed_end\n",
+    "                    TN[mode] = TN.setdefault(mode, 0) + no_sensed_start\n",
     "                else:\n",
-    "                    # True Negative\n",
-    "                    TN[mode] = no_sensed\n",
+    "                    TN[mode] = TN.setdefault(mode, 0) + no_sensed_start + no_sensed_end\n",
+    "#                 if mode == 'INVALID':\n",
+    "#                     FP[mode] = no_sensed_end + no_sensed_start\n",
+    "#                 elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
+    "#                     # False Negative\n",
+    "#                     FN[mode] = FN.setdefault(mode, 0) + no_sensed_start\n",
+    "#                 elif mode == BASE_MODE[trip['gts_timeline'][-1]['mode']]:\n",
+    "#                     FN[mode] = FN.setdefault(mode, 0) + no_sensed_end\n",
+    "#                 else:\n",
+    "#                     TN[mode] = TN.setdefault(mode, 0) + no_sensed_start\n",
     "            for ss in trip['ss_timeline']:\n",
     "#                 print(ss.keys())\n",
     "                if 'data' in ss.keys():\n",
@@ -626,15 +640,19 @@
     "    for trip in trips:\n",
     "        ## get no sensed\n",
     "        if len(trip['ss_timeline']) > 0 and len(trip['gts_timeline']) > 0:\n",
-    "            no_sensed = 0\n",
+    "            no_sensed_start = 0\n",
+    "            no_sensed_end = 0\n",
     "            try:\n",
-    "                no_sensed = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']) \n",
-    "                no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
+    "                no_sensed_start = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']) \n",
+    "                no_sensed_end = max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
     "            except:\n",
-    "                no_sensed = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "                no_sensed += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
-    "            if no_sensed:\n",
-    "                ns = {'sensed_mode' : 'NO_SENSED', trip['gts_timeline'][0]['mode'] : no_sensed}\n",
+    "                no_sensed_start = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
+    "                no_sensed_end += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
+    "            if no_sensed_start:\n",
+    "                ns = {'sensed_mode' : 'NO_SENSED', trip['gts_timeline'][0]['mode'] : no_sensed_start}\n",
+    "                cm_l.append(ns)\n",
+    "            if no_sensed_end:\n",
+    "                ns = {'sensed_mode' : 'NO_SENSED', trip['gts_timeline'][-1]['mode'] : no_sensed_end}\n",
     "                cm_l.append(ns)\n",
     "        for ss in trip['ss_timeline']:\n",
     "            if 'data' in ss.keys():\n",
@@ -1148,25 +1166,24 @@
    "id": "b130e0b5",
    "metadata": {},
    "source": [
-    "### No sensed at beggining and end, unimodal\n",
+    "### No sensed at beggining and end, multimodal\n",
     "\n",
     "* pipeline timeline\n",
-    "WALKING (0.5, 1.5)\n",
+    "WALKING (0.5, 1) -> BIKING (1, 1.5)\n",
     "\n",
     "* ground truth timeline\n",
     "WALKING (0, 2)\n",
     "\n",
     "#### Multiclass classifiers\n",
     "* TP\n",
-    "    + WALKING [1]\n",
+    "    + WALKING [0.5]\n",
     "* FP\n",
+    "    + CYCLING [0.5]\n",
     "    + INVALID [1]\n",
     "* FN\n",
-    "    + WALKING [1]\n",
+    "    + WALKING [1.5]\n",
     "* TN\n",
     "    + INVALID [1]\n",
-    "* $F_1$ score\n",
-    "    + ...\n",
     "#### Confusion Matrix\n",
     "\n",
     "sensed mode = ['WALKING', 'NO_SENSED']\n",
@@ -1184,10 +1201,10 @@
    "outputs": [],
    "source": [
     "test_trip = {\n",
-    "    'ss_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1.5, 'mode' : 'WALKING'}],\n",
+    "    'ss_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1, 'mode' : 'WALKING'}, {'start_ts' : 1, 'end_ts' : 1.5, 'mode' : 'CYCLING'}],\n",
     "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 2, 'mode' : 'WALKING'}]\n",
     "}\n",
-    "test_BMM = {'WALKING' : 'WALKING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : \"CYCLING\", 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
    ]
   },
   {
@@ -1203,14 +1220,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40d5b543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "53c30f06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert res[0]['WALKING'] == 1\n",
-    "assert res[1]['INVALID'] == 1\n",
-    "assert res[2]['WALKING'] == 1\n",
-    "assert res[3]['INVALID'] == 1"
+    "assert res[0]['WALKING'] == 0.5\n",
+    "assert res[1]['INVALID'] == 1.0 and res[1]['CYCLING'] == 0.5\n",
+    "assert res[2]['WALKING'] == 1.5\n",
+    "assert res[3]['INVALID'] == 1.0"
    ]
   },
   {
@@ -1231,7 +1258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert df.loc['WALKING'].loc['WALKING'] == 1\n",
+    "assert df.loc['WALKING'].loc['WALKING'] == 0.5\n",
+    "assert df.loc['CYCLING'].loc['WALKING'] == 0.5\n",
     "assert df.loc['NO_SENSED'].loc['WALKING'] == 1"
    ]
   },
