added last unit test, believe the suite is comprehensive

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -456,17 +456,7 @@
     "                    TN[mode] = TN.setdefault(mode, 0) + no_sensed_start\n",
     "                else:\n",
     "                    TN[mode] = TN.setdefault(mode, 0) + no_sensed_start + no_sensed_end\n",
-    "#                 if mode == 'INVALID':\n",
-    "#                     FP[mode] = no_sensed_end + no_sensed_start\n",
-    "#                 elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
-    "#                     # False Negative\n",
-    "#                     FN[mode] = FN.setdefault(mode, 0) + no_sensed_start\n",
-    "#                 elif mode == BASE_MODE[trip['gts_timeline'][-1]['mode']]:\n",
-    "#                     FN[mode] = FN.setdefault(mode, 0) + no_sensed_end\n",
-    "#                 else:\n",
-    "#                     TN[mode] = TN.setdefault(mode, 0) + no_sensed_start\n",
     "            for ss in trip['ss_timeline']:\n",
-    "#                 print(ss.keys())\n",
     "                if 'data' in ss.keys():\n",
     "                    ss = ss['data']\n",
     "                    ss['mode'] = ss['sensed_mode']\n",
@@ -1169,28 +1159,32 @@
     "### No sensed at beggining and end, multimodal\n",
     "\n",
     "* pipeline timeline\n",
-    "WALKING (0.5, 1) -> BIKING (1, 1.5)\n",
+    "WALKING (0.5, 1.5)\n",
     "\n",
     "* ground truth timeline\n",
-    "WALKING (0, 2)\n",
+    "WALKING (0, 1) -> (1, 2)\n",
     "\n",
     "#### Multiclass classifiers\n",
     "* TP\n",
     "    + WALKING [0.5]\n",
     "* FP\n",
-    "    + CYCLING [0.5]\n",
+    "    + WALKING [0.5]\n",
     "    + INVALID [1]\n",
     "* FN\n",
-    "    + WALKING [1.5]\n",
+    "    + WALKING [0.5]\n",
+    "    + CYCLING [1]\n",
     "* TN\n",
+    "    + WALKING [0.5]\n",
+    "    + CYCLING [1]\n",
     "    + INVALID [1]\n",
     "#### Confusion Matrix\n",
     "\n",
     "sensed mode = ['WALKING', 'NO_SENSED']\n",
     "\n",
-    "ground truth = ['WALKING']\n",
+    "ground truth = ['WALKING', 'CYCLING']\n",
     "\n",
-    "    [1,1]"
+    "    [0.5, 0.5]\n",
+    "    [0.5, 0.5]"
    ]
   },
   {
@@ -1201,8 +1195,8 @@
    "outputs": [],
    "source": [
     "test_trip = {\n",
-    "    'ss_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1, 'mode' : 'WALKING'}, {'start_ts' : 1, 'end_ts' : 1.5, 'mode' : 'CYCLING'}],\n",
-    "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 2, 'mode' : 'WALKING'}]\n",
+    "    'ss_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1.5, 'mode' : 'WALKING'}],\n",
+    "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 1, 'mode' : 'WALKING'}, {'start_ts' : 1, 'end_ts' : 2, 'mode' : 'CYCLING'}]\n",
     "}\n",
     "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : \"CYCLING\", 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
    ]
@@ -1220,24 +1214,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d5b543",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "53c30f06",
    "metadata": {},
    "outputs": [],
    "source": [
     "assert res[0]['WALKING'] == 0.5\n",
-    "assert res[1]['INVALID'] == 1.0 and res[1]['CYCLING'] == 0.5\n",
-    "assert res[2]['WALKING'] == 1.5\n",
-    "assert res[3]['INVALID'] == 1.0"
+    "assert res[1]['INVALID'] == 1.0 and res[1]['WALKING'] == 0.5\n",
+    "assert res[2]['WALKING'] == 0.5 and res[2]['CYCLING'] == 1 \n",
+    "assert res[3]['WALKING'] == 0.5 and res[3]['CYCLING'] == 1 and res[3]['INVALID'] == 1"
    ]
   },
   {
@@ -1259,8 +1243,9 @@
    "outputs": [],
    "source": [
     "assert df.loc['WALKING'].loc['WALKING'] == 0.5\n",
-    "assert df.loc['CYCLING'].loc['WALKING'] == 0.5\n",
-    "assert df.loc['NO_SENSED'].loc['WALKING'] == 1"
+    "assert df.loc['WALKING'].loc['CYCLING'] == 0.5\n",
+    "assert df.loc['NO_SENSED'].loc['WALKING'] == 0.5\n",
+    "assert df.loc['NO_SENSED'].loc['CYCLING'] == 0.5"
    ]
   },
   {
